# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: d72af541ab53_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
